# radix-engine-toolkit

./: .gitignore  .phylum_project  Cargo.toml  Changelog.md  LICENSE  README.md  add_license.py  build-PC.sh  build-iOS.sh  build-specific.sh  build-wasm.sh  build.sh  build_wasm.sh  cbindgen.toml  changelog.md  check.sh  clear.sh  example.sh  file.json  format.sh  generate_manifest_inputs.py  main.py  prep.sh  rust-toolchain.toml  rustfmt.toml  test.sh  typeshare.sh  uniffi_bindgen.sh  update_test_manifests.py  x.sh
benches/: Cargo.toml  build.rs
benches/benches/: decompilation_benchmark.rs  transaction.hex
benches/lib/: libradix_engine_toolkit.dylib
benches/src/: lib.rs
cli-json-interface/: Cargo.toml
cli-json-interface/src/: cli.rs  error.rs  main.rs  utils.rs
cli-json-interface/src/address/: mod.rs
cli-json-interface/src/command/: analyze_manifest.rs  decode_address.rs  encode_address.rs  information.rs  mod.rs
cli-json-interface/src/subcommands/: mod.rs
core/: Cargo.toml
core/src/: buffer.rs  error.rs  lib.rs  traits.rs  utils.rs
core/src/model/: instruction.rs  mod.rs  value.rs
core/src/request/: compile_notarized_transaction.rs  compile_signed_transaction_intent.rs  compile_transaction_intent.rs  convert_manifest.rs  convert_manifest_request.rs  decode_address.rs  decompile_notarized_transaction.rs  decompile_signed_transaction_intent.rs  decompile_transaction_intent.rs  decompile_unknown_intent.rs  derive_virtual_account_address.rs  encode_address.rs  information.rs  known_entity_addresses.rs  mod.rs  sbor_decode.rs  sbor_encode.rs  statically_validate_transaction.rs
crates/generator/: Cargo.toml
crates/generator/src/: main.rs  utils.rs
crates/radix-engine-toolkit/: Cargo.toml  build.rs
crates/radix-engine-toolkit-json/: Cargo.toml
crates/radix-engine-toolkit-json/src/: error.rs  prelude.rs  utils.rs
crates/radix-engine-toolkit-json/tests/: instructions.rs
crates/radix-engine-toolkit-uniffi/: Cargo.toml  build.rs  uniffi.toml
crates/radix-engine-toolkit-uniffi/src/: error.rs  internal_prelude.rs  lib.rs  radix_engine_toolkit_uniffi.udl  traits.rs
crates/radix-engine-toolkit-uniffi/tests/: binding_generation.rs  test_go.rs  transaction_v2_builder.rs  typed_events.rs
crates/radix-engine-toolkit/src/: constants.rs  error.rs  lib.rs  statics.rs  utils.rs
crates/radix-engine-toolkit/tests/: account_deposit_settings_visitor.rs  account_interactions.rs  account_proofs.rs  analysis_folder.rs  classification_folder.rs  derive.rs  execution.rs  functions_folder.rs  general_transaction_visitor.rs  information.rs  instructions.rs  intent.rs  invariants.rs  invariants_folder.rs  manifest.rs  manifest_sbor.rs  non_fungible.rs  notarized_transaction.rs  schema_visitor.rs  scrypto_sbor.rs  signed_intent.rs  simple_transfer_visitor.rs  subintent_manifest_v2.rs  test_data.rs  test_runner_extension.rs  transaction_types.rs  transfer_visitor.rs  utils.rs  worktop.rs
crates/sbor-json/: Cargo.toml
crates/sbor-json/src/: lib.rs  utils.rs
crates/sbor-json/tests/: programmatic_scrypto_sbor.rs
docs-examples-generator/: Cargo.toml  request-examples.md
docs-examples-generator/src/: examples.rs  examples_builder.rs  main.rs
generator/: Cargo.toml
generator/output/function_examples/: derive.json
generator/src/: main.rs  utils.rs
native-json-interface/: Cargo.toml  cbindgen.toml
native-json-interface/src/: lib.rs
native-json-interface/tests/: toolkit_wasm_wrapper.rs
native-json-library/: Cargo.toml  cbindgen.toml  clippy.toml
native-json-library/src/: error.rs  lib.rs  prelude.rs
native-json-library/tests/: instructions.rs
radix-engine-toolkit/: Cargo.toml  build.rs  cbindgen.toml
radix-engine-toolkit-core/: Cargo.toml  build.rs  clippy.toml
radix-engine-toolkit-core/src/: address.rs  error.rs  lib.rs  memory.rs  statics.rs  traits.rs  utils.rs
radix-engine-toolkit-core/tests/: account_deposit_settings_visitor.rs  account_interactions.rs  account_proofs.rs  convert_manifest.rs  convert_manifest_request.rs  derivations.rs  derive.rs  execution.rs  general_transaction_visitor.rs  instruction.rs  intent.rs  manifest.rs  manifest_sbor.rs  notarized_transaction.rs  schema_visitor.rs  scrypto_sbor.rs  signed_intent.rs  simple_transfer_visitor.rs  test_data.rs  test_vectors.rs  transfer_visitor.rs  utils.rs  value.rs
radix-engine-toolkit-jni/: Cargo.toml  build.sh  cbindgen.toml  x.sh
radix-engine-toolkit-jni/.cargo/: config.toml
radix-engine-toolkit-jni/src/: lib.rs
radix-engine-toolkit-native/: Cargo.toml  build.sh  cbindgen.toml
radix-engine-toolkit-native/.cargo/: config.toml
radix-engine-toolkit-native/src/: lib.rs
radix-engine-toolkit-uniffi/: Cargo.toml  build.rs  uniffi.toml
radix-engine-toolkit-uniffi/src/: error.rs  internal_prelude.rs  lib.rs  traits.rs
radix-engine-toolkit-uniffi/tests/: binding_generation.rs  typed_events.rs
radix-engine-toolkit-wasm/: Cargo.toml  build.sh  cbindgen.toml
radix-engine-toolkit-wasm/src/: lib.rs
radix-engine-toolkit-wasm/tests/: transaction_library.rs
radix-engine-toolkit/src/: enum_discriminator.rs  error.rs  lib.rs  macros.rs  memory.rs  prelude.rs  statics.rs  traits.rs  utils.rs
radix-engine-toolkit/tests/: account_interactions.rs  account_proofs.rs  aliasing.rs  analyze_manifest.rs  analyze_manifest_with_preview_context.rs  analyze_transaction_execution.rs  common_manifests.rs  cross_network_address_derivations.rs  decompilation_tests.rs  derive.rs  derive_babylon_address_from_olympia_address.rs  execution.rs  extract_addresses_from_manifest.rs  instruction.rs  instructions.rs  intent.rs  manifest.rs  manifest_sbor.rs  notarized_transaction.rs  programmatic_json.rs  proofs_visitor.rs  schema_visitor.rs  scrypto_sbor.rs  signed_intent.rs  simple_transfer_visitor.rs  statically_validate_transaction_tests.rs  test_data.rs  transfer_visitor.rs  utils.rs  value.rs
sbor-json/: Cargo.toml
sbor-json/src/: utils.rs
sbor-json/tests/: programmatic_scrypto_sbor.rs
schema/: Cargo.toml  schema.json
schema/src/: examples.rs  examples_builder.rs  main.rs
(+2053 files in other folders)
