[workspace]
resolver = "2"
members = [
    # Core RET crates
    "crates/radix-engine-toolkit",
    # "crates/radix-engine-toolkit-json",
    "crates/radix-engine-toolkit-uniffi",
    # Auxiliary Crates
    "crates/sbor-json",
    # Bindings Crates
    # "crates/generator",
    "crates/uniffi-bindgen",
]

# Shared dependencies that all of the crates need - for now this is just the 
# `radixdlt-scrypto` dependencies
[workspace.dependencies]
sbor = { git = "https://github.com/radixdlt/radixdlt-scrypto", rev = "45bd94457e429ea65e954a7fab20dd4ddd987030", features = [
    "serde",
] }
scrypto = { git = "https://github.com/radixdlt/radixdlt-scrypto", rev = "45bd94457e429ea65e954a7fab20dd4ddd987030", features = [
    "serde",
] }
scrypto-test = { git = "https://github.com/radixdlt/radixdlt-scrypto", rev = "45bd94457e429ea65e954a7fab20dd4ddd987030" }
radix-common = { git = "https://github.com/radixdlt/radixdlt-scrypto", rev = "45bd94457e429ea65e954a7fab20dd4ddd987030", features = [
    "serde",
] }
radix-engine = { git = "https://github.com/radixdlt/radixdlt-scrypto", rev = "45bd94457e429ea65e954a7fab20dd4ddd987030" }
radix-engine-interface = { git = "https://github.com/radixdlt/radixdlt-scrypto", rev = "45bd94457e429ea65e954a7fab20dd4ddd987030" }
radix-substate-store-queries = { git = "https://github.com/radixdlt/radixdlt-scrypto", rev = "45bd94457e429ea65e954a7fab20dd4ddd987030" }
radix-substate-store-impls = { git = "https://github.com/radixdlt/radixdlt-scrypto", rev = "45bd94457e429ea65e954a7fab20dd4ddd987030" }
radix-substate-store-interface = { git = "https://github.com/radixdlt/radixdlt-scrypto", rev = "45bd94457e429ea65e954a7fab20dd4ddd987030" }
radix-transactions = { git = "https://github.com/radixdlt/radixdlt-scrypto", rev = "45bd94457e429ea65e954a7fab20dd4ddd987030" }
radix-transaction-scenarios = { git = "https://github.com/radixdlt/radixdlt-scrypto", rev = "45bd94457e429ea65e954a7fab20dd4ddd987030" }
radix-engine-toolkit-common = { git = "https://github.com/radixdlt/radixdlt-scrypto", rev = "45bd94457e429ea65e954a7fab20dd4ddd987030" }

[profile.release]
incremental = false
panic = 'unwind'
codegen-units = 1
