[workspace]
resolver = "2"
members = [
    # Core RET crates
    "crates/radix-engine-toolkit",
    # "crates/radix-engine-toolkit-json",
    "crates/radix-engine-toolkit-uniffi",
    # Auxiliary Crates
    "crates/sbor-json",
    # Bindings Crates
    # "crates/generator",
    "crates/uniffi-bindgen",
]

[workspace.dependencies]
# The Radix DLT Scrypto Dependencies - we're currently using a git tag or a git
# dependency due to the `radix-engine-toolkit-common` crate is sadly not being
# published to `crates.io`. Once it is published there we can make the switch to
# use the `crates.io` version.
sbor = { git = "https://github.com/radixdlt/radixdlt-scrypto", rev = "f32ab3bcb2d0dea22674c9017a5351ac93d2890c" }
scrypto = { git = "https://github.com/radixdlt/radixdlt-scrypto", rev = "f32ab3bcb2d0dea22674c9017a5351ac93d2890c" }
scrypto-test = { git = "https://github.com/radixdlt/radixdlt-scrypto", rev = "f32ab3bcb2d0dea22674c9017a5351ac93d2890c" }
radix-common = { git = "https://github.com/radixdlt/radixdlt-scrypto", rev = "f32ab3bcb2d0dea22674c9017a5351ac93d2890c" }
radix-engine = { git = "https://github.com/radixdlt/radixdlt-scrypto", rev = "f32ab3bcb2d0dea22674c9017a5351ac93d2890c" }
radix-transactions = { git = "https://github.com/radixdlt/radixdlt-scrypto", rev = "f32ab3bcb2d0dea22674c9017a5351ac93d2890c" }
radix-engine-interface = { git = "https://github.com/radixdlt/radixdlt-scrypto", rev = "f32ab3bcb2d0dea22674c9017a5351ac93d2890c" }
radix-substate-store-queries = { git = "https://github.com/radixdlt/radixdlt-scrypto", rev = "f32ab3bcb2d0dea22674c9017a5351ac93d2890c" }
radix-substate-store-impls = { git = "https://github.com/radixdlt/radixdlt-scrypto", rev = "f32ab3bcb2d0dea22674c9017a5351ac93d2890c" }
radix-substate-store-interface = { git = "https://github.com/radixdlt/radixdlt-scrypto", rev = "f32ab3bcb2d0dea22674c9017a5351ac93d2890c" }
radix-transaction-scenarios = { git = "https://github.com/radixdlt/radixdlt-scrypto", rev = "f32ab3bcb2d0dea22674c9017a5351ac93d2890c" }
radix-engine-toolkit-common = { git = "https://github.com/radixdlt/radixdlt-scrypto", rev = "f32ab3bcb2d0dea22674c9017a5351ac93d2890c" }

# UniFFI dependencies
uniffi = { git = "https://github.com/0xOmarA/uniffi-rs", tag = "v0.25.4" }

# Internal Dependencies
sbor-json = { path = "crates/sbor-json" }
radix-engine-toolkit = { path = "crates/radix-engine-toolkit" }

# External dependencies
paste = { version = "1.0.14" }
extend = { version = "1.2.0" }

serde = { version = "1.0.185" }
serde_json = { version = "1.0.96" }
serde_with = { version = "3.6.1" }

hex = { version = "0.4.3" }
regex = { version = "1.8.4" }
bech32 = { version = "0.9.1" }
itertools = { version = "0.14.0" }
thiserror = { version = "1.0.50" }
cargo_toml = { version = "0.15.3" }

[profile.release]
incremental = false
panic = 'unwind'
codegen-units = 1
