[workspace]
resolver = "2"
members = [
    # Core RET crates
    "crates/radix-engine-toolkit",
    # "crates/radix-engine-toolkit-json",
    "crates/radix-engine-toolkit-uniffi",
    # Auxiliary Crates
    "crates/sbor-json",
    # Bindings Crates
    "crates/generator",
    "crates/uniffi-bindgen",
]

[workspace.dependencies]
# The Radix DLT Scrypto Dependencies.
sbor = { version = "1.3.1" }
scrypto = { version = "1.3.1" }
scrypto-test = { version = "1.3.1" }
radix-common = { version = "1.3.1" }
radix-engine = { version = "1.3.1" }
radix-transactions = { version = "1.3.1" }
radix-engine-interface = { version = "1.3.1" }
radix-substate-store-queries = { version = "1.3.1" }
radix-substate-store-impls = { version = "1.3.1" }
radix-substate-store-interface = { version = "1.3.1" }
radix-transaction-scenarios = { version = "1.3.1" }
radix-engine-toolkit-common = { version = "1.3.1" }

# UniFFI dependencies
uniffi = { git = "https://github.com/0xOmarA/uniffi-rs", tag = "v0.25.4" }

# Internal Dependencies
sbor-json = { path = "crates/sbor-json" }
radix-engine-toolkit = { path = "crates/radix-engine-toolkit" }

# External dependencies
paste = { version = "1.0.14" }
extend = { version = "1.2.0" }

serde = { version = "1.0.185" }
serde_json = { version = "1.0.96" }
serde_with = { version = "3.6.1" }

hex = { version = "0.4.3" }
regex = { version = "1.8.4" }
bech32 = { version = "0.9.1" }
itertools = { version = "0.14.0" }
thiserror = { version = "1.0.50" }
cargo_toml = { version = "0.15.3" }

[profile.release]
incremental = false
panic = 'unwind'
codegen-units = 1
