[package]
name = "docs-examples-generator"
version = "0.7.0"
edition = "2021"

[dependencies]
radix-engine-toolkit-core = { path = "../radix-engine-toolkit-core" }

convert_case = "0.6.0"
lazy_static = "1.4.0"

serde = { version = "1.0.144", default-features = false, features = ["serde_derive"] }
serde_json = "1.0.89"

scrypto = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v0.7.0"}
transaction = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v0.7.0" }
hex = "0.4.3"
