[package]
name = "generator"
version = "0.1.0"
edition = "2021"

[dependencies]
# radixdlt-scrypto dependencies.
sbor = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "develop-13f090f8", features = ["serde"] }
scrypto = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "develop-13f090f8", features = ["serde"] }
transaction = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "develop-13f090f8" }
radix-engine = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "develop-13f090f8", default-features= false, features = ["std", "lru"] }
radix-engine-common = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "develop-13f090f8", features = ["serde"] }

# Core Radix Engine Toolkit and Toolkit Native Library
radix-engine-toolkit = { path = "../radix-engine-toolkit" }
native-json-library = { path = "../native-json-library" }

# Serde dependencies
serde = { version = "1.0.163" }
serde_json = { version = "1.0.96" }
serde_with = { version = "3.0.0", features = ["hex"] }
schemars = { version = "0.8.12", features = ["preserve_order"] }

# Used to change the casing of strings
heck = { version = "0.4.1" }

# Used in walking directories to get manifests
walkdir = { version = "2.3.3" }

# Misc
indexmap = { version = "1.9.3" }