[package]
name = "radix-engine-toolkit-core"
version = "1.0.0"
edition = "2021"
build = "build.rs"

[dependencies]
# radixdlt-scrypto dependencies.
sbor = { git = "https://github.com/radixdlt/radixdlt-scrypto", rev = "4ebc4b0c7ff65b7513693078013bc79df953a1b6", features = ["serde"] }
scrypto = { git = "https://github.com/radixdlt/radixdlt-scrypto", rev = "4ebc4b0c7ff65b7513693078013bc79df953a1b6", features = ["serde"] }
transaction = { git = "https://github.com/radixdlt/radixdlt-scrypto", rev = "4ebc4b0c7ff65b7513693078013bc79df953a1b6" }
radix-engine = { git = "https://github.com/radixdlt/radixdlt-scrypto", rev = "4ebc4b0c7ff65b7513693078013bc79df953a1b6", default-features= false, features = ["std"] }
radix-engine-stores = { git = "https://github.com/radixdlt/radixdlt-scrypto", rev = "4ebc4b0c7ff65b7513693078013bc79df953a1b6" }
radix-engine-common = { git = "https://github.com/radixdlt/radixdlt-scrypto", rev = "4ebc4b0c7ff65b7513693078013bc79df953a1b6", features = ["serde"] }
radix-engine-queries = { git = "https://github.com/radixdlt/radixdlt-scrypto", rev = "4ebc4b0c7ff65b7513693078013bc79df953a1b6", default-features= false, features = ["std"] }
radix-engine-interface = { git = "https://github.com/radixdlt/radixdlt-scrypto", rev = "4ebc4b0c7ff65b7513693078013bc79df953a1b6" }
radix-engine-store-interface = { git = "https://github.com/radixdlt/radixdlt-scrypto", rev = "4ebc4b0c7ff65b7513693078013bc79df953a1b6" }

# Bech32 encoding and decoding of addresses. Used for the Olympia <-> Babylon address derivations.
bech32 = { version = "0.9.1" }

# The serde-json dependency without the serde dependency. This is used for the SBOR serialization
# in the `scrypto_sbor.rs` and `manifest_sbor.rs` modules and ONLY there. 
serde_json = { version = "1.0.96", features = ["preserve_order"] }

# Used by the Radix Engine Toolkit to cashe the result of some operations that should only be 
# computed once.
lazy_static = { version = "1.4.0" }
regex = "1.8.4"

# A crate that implements the various sbor-json formats.
sbor-json = { path = "../sbor-json" }

[build-dependencies]
cargo_toml = { version = "0.15.3" }

[dev-dependencies]
scrypto-unit = { git = "https://github.com/radixdlt/radixdlt-scrypto", rev = "4ebc4b0c7ff65b7513693078013bc79df953a1b6", default-features = false, features = ["std", "resource_tracker"] }

[features]
default = ["moka"]
moka = ["radix-engine/moka", "radix-engine-queries/moka", "scrypto-unit/moka"]
lru = ["radix-engine/lru", "radix-engine-queries/lru", "scrypto-unit/lru"]

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]
