[package]
name = "radix-engine-toolkit-jni"
version = "0.7.0"
edition = "2021"

[dependencies]
radix-engine-toolkit-core = { path = "../radix-engine-toolkit-core" }

jni = { version = "0.20.0", default-features = false }
paste = { version = "1.0.9",  default-features = false }

serde = { version = "1.0.144", default-features = false, features = ["serde_derive"] }
serde_json = { version = "1.0.85", default-features = false, features = ["std"] }

# This release profile is chosen after many different profiles were tested. The main objective of 
# this profile is to optimize the builds for size. Some of the data on why this profile was chosen
# can be found here:
# https://docs.google.com/spreadsheets/d/1sNFGZPr84PKdzTQA8xsZxHWedff2qNxPjj8bmBusyLM.
[profile.release]
panic = 'abort'
codegen-units = 1

[lib]
name = "radix_engine_toolkit"
crate-type = ["cdylib"]
