[package]
name = "radix-engine-toolkit-native"
version = "0.7.0"
edition = "2021"

[dependencies]
radix-engine-toolkit-core = { path = "../radix-engine-toolkit-core" }

# This release profile is chosen after many different profiles were tested. The main objective of 
# this profile is to optimize the builds for size. Some of the data on why this profile was chosen
# can be found here:
# https://docs.google.com/spreadsheets/d/1sNFGZPr84PKdzTQA8xsZxHWedff2qNxPjj8bmBusyLM.
[profile.release]
panic = 'abort'
codegen-units = 1

[lib]
name = "radix_engine_toolkit"
crate-type = ["staticlib", "cdylib"]