[package]
name = "radix-engine-toolkit-uniffi"
version = "1.0.0"
edition = "2021"
build = "build.rs"

[dependencies]
# radixdlt-scrypto dependencies.
sbor = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.0.0", features = ["serde"] }
scrypto = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.0.0", features = ["serde"] }
transaction = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.0.0" }
radix-engine = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.0.0", default-features= false, features = ["std", "moka"] }
radix-engine-common = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.0.0", features = ["serde"] }
radix-engine-queries = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.0.0", default-features = false, features = ["std", "moka"] }
radix-engine-interface = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.0.0" }

# Core Radix Engine Toolkit
radix-engine-toolkit-core = { path = "../radix-engine-toolkit-core" }

# The UniFFI crate for generating bindings to other languages
uniffi = { git = "https://github.com/mozilla/uniffi-rs/", rev = "7b18fa787336aa738f205a44f7b2df728e83a097", features = ["cli"] }
hex = "0.4.3"
thiserror = "1.0.40"
paste = "1.0.12"

[build-dependencies]
# The UniFFI crate for generating bindings to other languages
uniffi = { git = "https://github.com/mozilla/uniffi-rs/", rev = "7b18fa787336aa738f205a44f7b2df728e83a097", features = ["build"] }

[dev-dependencies]
# The UniFFI crate for generating bindings to other languages
uniffi = { git = "https://github.com/mozilla/uniffi-rs/", rev = "7b18fa787336aa738f205a44f7b2df728e83a097", features = ["bindgen-tests"] }
scrypto-unit = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.0.0", default-features = false, features = ["std", "moka"] }
radix-engine-stores = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.0.0" }
transaction-scenarios = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.0.0" }

[lib]
crate-type = ["staticlib", "cdylib", "lib"]

[profile.release]
incremental = false
panic = 'unwind'        # Must be 'unwind' to be able to recover from panics.
codegen-units = 1
